--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: "emerald"
+title: "WebonsTop"
 description: ""
-url: "https://emerald.web.app"  # http://localhost:4000 
+url: "https://webonstop.web.app"  # http://localhost:4000 
 
 title_slog: "" # Home pge slog
 title_sep: "" # Home
