--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,9 +1,8 @@
-name: Jekyll Deploy
+name: jekyll
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: "0 */7 * * *"
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
